[package]
name = "byteorder_async"
version = "1.0.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>", "Sam M."]
description = "Library for reading/writing numbers in big-endian and little-endian asynchronously."
documentation = "https://docs.rs/byteorder"
homepage = "https://github.com/pigeonhands/byteorder_async"
repository = "https://github.com/pigeonhands/byteorder_async"
readme = "README.md"
categories = ["encoding", "parsing"]
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
license = "Unlicense OR MIT"
exclude = ["/ci/*"]
build = "build.rs"
edition = "2018"

[lib]
name = "byteorder_async"
bench = false

[dependencies]
tokio = {version="0.2.18", features=["io-util"], optional = true }
futures = { version = "0.3.4", optional = true }


[dev-dependencies]
quickcheck = { version = "0.8", default-features = false }
rand = "0.6"

[features]
default = ["std"]
std = []
tokio_async = ["tokio"]
futures_async = ["futures"]

# This feature is no longer used and is DEPRECATED. This crate now
# automatically enables i128 support for Rust compilers that support it. The
# feature will be removed if and when a new major version is released.
i128 = []

[profile.bench]
opt-level = 3
