[package]
name = "byteorder_async"
version = "1.4.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>", "Sam M."]
description = "Library for reading/writing numbers in big-endian and little-endian asynchronously."
documentation = "https://docs.rs/byteorder"
homepage = "https://github.com/rsribeiro/byteorder_async"
repository = "https://github.com/rsribeiro/byteorder_async"
readme = "README.md"
categories = ["encoding", "parsing", "no-std"]
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
license = "Unlicense OR MIT"
exclude = ["/ci/*"]
edition = "2018"

[lib]
name = "byteorder_async"
doctest = false
bench = false

[dependencies]
tokio = {version="0.2.18", features=["io-util"], optional = true }
futures = { version = "0.3.4", optional = true }
async-trait = "0.1.38"

[dev-dependencies]
quickcheck = { version = "0.9.2", default-features = false }
rand = "0.7"

[features]
default = ["std"]
std = []
tokio_async = ["tokio"]
futures_async = ["futures"]

# This feature is no longer used and is DEPRECATED. This crate now
# automatically enables i128 support for Rust compilers that support it. The
# feature will be removed if and when a new major version is released.
i128 = []

[profile.bench]
opt-level = 3
